SAT findings and nullness annotations
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>